--- a/joe/nflfastR_data_loading.ipynb
+++ b/joe/nflfastR_data_loading.ipynb
@@ -6,8 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd \n",
-    "\n",
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Enter desired years of data\n",
     "YEARS = [2019,2018,2017]\n",
     "\n",
